--- a/psgrcounter.css
+++ b/psgrcounter.css
@@ -1,41 +1,50 @@
-body
-{
-    background: #f5f5f5;
-    margin: 50px 450px;
+/** @format */
+
+body {
+  background-image: linear-gradient(90deg, aqua, beige);
+  margin: 40px 450px;
+  align-items: center;
+  justify-items: center;
 }
-.container
-{
-    border: 1px solid #000;
-    border-radius: 5px;
-    background-image: url(kev.jpg);
-    margin: 80px;
-    padding: 40px;
-    text-align: center;
+.container {
+  border: 1px solid #000;
+  border-radius: 5px;
+  background-image: url(kev.jpg);
+  margin: 80px;
+  padding: 40px;
+  text-align: center;
 }
-#increment-btn
-{
-    background: #ff0000;
-    padding: 4px 40px;
-    font-weight: bolder;
-    color: #fff;
-    border: 1px solid #ff0000;
-    border-radius: 3px;
+#increment-btn {
+  background: #ff0000;
+  padding: 4px 40px;
+  font-weight: bolder;
+  color: #fff;
+  border: 1px solid #ff0000;
+  border-radius: 3px;
 }
-#save-btn
-{
-    background: #043502;
-    padding: 4px 62px;
-    font-weight: bolder;
-    color: #fff;
-    border: 1px solid #043502;
-    border-radius: 3px;
+#save-btn {
+  background: #043502;
+  padding: 4px 62px;
+  font-weight: bolder;
+  color: #fff;
+  border: 1px solid #043502;
+  border-radius: 3px;
 }
-#count-el
-{
-    font-size: 35px;
+#count-el {
+  font-size: 35px;
 }
-p
-{
-    font-weight: bold;
-    font-size: 15px;
+p {
+  font-weight: bold;
+  font-size: 15px;
+}
+@media (min-width: 300px) and (max-width: 900px) {
+  body {
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
+    display: block;
+    margin: auto;
+    align-items: center;
+    justify-items: center;
+  }
 }
